external-crates/move/crates/bytecode-interpreter-testsuite/tests/concrete_check/quantifier.exp
Running Move unit tests
[ FAIL    ] 0x2::A::init_vector_failure
[ PASS    ] 0x2::A::init_vector_success

Test failures:

Failures in 0x2::A:

┌── init_vector_failure ──────
│ error: failed to evaluate expression: enumeration of a non-address type domain is not supported
│    ┌─ tests/concrete_check/quantifier.move:27:27
│    │
│ 27 │         ensures exists i: u64 where (i == len(result) - 1): result[i] == 1;
│    │                           ^^^
│
│ error: failed to evaluate expression: unexpected error code
│    ┌─ tests/concrete_check/quantifier.move:27:17
│    │
│ 27 │         ensures exists i: u64 where (i == len(result) - 1): result[i] == 1;
│    │                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
│
│ error: failed to evaluate expression: enumeration of a non-address type domain is not supported
│    ┌─ tests/concrete_check/quantifier.move:28:27
│    │
│ 28 │         ensures exists i: u64: (i == len(result) - 1) ==> result[i] == 1;
│    │                           ^^^
│
│ error: failed to evaluate expression: unexpected error code
│    ┌─ tests/concrete_check/quantifier.move:28:17
│    │
│ 28 │         ensures exists i: u64: (i == len(result) - 1) ==> result[i] == 1;
│    │                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
│
│ error: failed to evaluate expression: enumeration of a non-address type domain is not supported
│    ┌─ tests/concrete_check/quantifier.move:29:27
│    │
│ 29 │         ensures exists i: u64: result[i] == 1;
│    │                           ^^^
│
│ error: failed to evaluate expression: unexpected error code
│    ┌─ tests/concrete_check/quantifier.move:29:17
│    │
│ 29 │         ensures exists i: u64: result[i] == 1;
│    │                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
│
│
└──────────────────

Test result: FAILED. Total tests: 2; passed: 1; failed: 1
